(forums) Break and hyphenate long words to prevent screen overflow on mobile

--- a/astrobin/static/astrobin/scss/forum.scss
+++ b/astrobin/static/astrobin/scss/forum.scss
@@ -61,6 +61,8 @@ table.forums, table.topic-list {
       display: inline;
       margin-right: .5rem;
       color: $white;
+      word-break: break-word;
+      hyphens: auto;
 
       &:hover {
         color: $link-color !important;
